# SVCD_perception

./: custom_dataset.py  inference_server.py  stack_with_open3d.py  view_npy.py
install/: local_setup.sh  setup.sh
install/kiss_icp/lib/kiss_icp/: kiss_icp_node
install/kiss_icp/share/kiss_icp/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/lidar_processor/lib/lidar_processor/: cone  marker_tracker_node  pc2np_opt_kitti  pc2np_opt_node  stacker_node  test_node  tracker
install/lidar_processor/share/lidar_processor/: package.dsv  package.ps1  package.sh  package.xml
install/perception_interfaces/share/perception_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/velodyne/share/velodyne/: local_setup.sh  package.sh
install/velodyne_driver/lib/velodyne_driver/: velodyne_driver_node
install/velodyne_driver/share/velodyne_driver/: local_setup.sh  package.sh
log/: latest_build
src/: perception_interfaces.tar.xz
src/gps_processor/: package.xml  setup.cfg  setup.py
src/gps_processor/gps_processor/: gps_llh2enu.py  gps_subscriber.py
src/lidar_processor/: package.xml  setup.cfg  setup.py
src/lidar_processor/cfg/: roi.yaml
src/lidar_processor/lidar_processor/: cone_test.py  kalman_tracker.py  marker_tracker.py  pc2np.py  pc2np_opt_kitti.py  pc2np_optimzer.py  roi_warning_node.py  test.py  tracker.py
src/perception_interfaces/: CMakeLists.txt
src/perception_interfaces/msg/: ObjectArray.msg  ObjectInfo.msg
(+93 files in other folders)
