cmake_minimum_required(VERSION 3.8)
project(perception_interfaces)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(std_msgs REQUIRED)

# [2] 인터페이스(msg) 생성 설정
rosidl_generate_interfaces(${PROJECT_NAME}
  "msg/ObjectInfo.msg"
  "msg/ObjectArray.msg"
  DEPENDENCIES geometry_msgs std_msgs
)

ament_package()
